syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "auth/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "authProtoV1";


service AuthService {
  rpc Login (LoginReq) returns (LoginRsp) {
    option (google.api.http) = {
      post: "/auth/login",
      body: "*",
    };
  }
  rpc Logout (LogoutReq) returns (LogoutRsp) {
    option (google.api.http) = {
      post: "/auth/logout",
      body: "*",
    };
  }
}



message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginRsp {
  string token = 1;
}


message LogoutReq {
  string token = 1;
}

message LogoutRsp {
  string message = 1;
}
